Java 17 Update Spring Boot version Update MapStruct version Classes package protected Eliminate usage of ResponseEntity Use @RequiredArgsConstructor